--- a/day 5 assingment/q6.html
+++ b/day 5 assingment/q6.html
@@ -8,11 +8,12 @@
 </head>
 
 <body>
-    <iframe src="https://www.youtube.com/watch?v=rJE5jzi4q2Y"
-    width="560px"  
-    height="315px">
-        
-    </iframe>
+     <iframe width="560" height="315" src="https://www.youtube.com/embed/EVnY-K75tl8?si=PQwnFVASvN5K7Trk"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+
 
     <h2>note: maam this is not working</h2>
 
